# salome_geom

./: CMakeLists.txt  CTestTestfileInstall.cmake  INSTALL  Makefile.am  Makefile.in  README  SalomeGEOMConfig.cmake.in  build_configure  configure.ac  configure.in.base
src/CurveCreator/: CMakeLists.txt  CurveCreator.hxx  CurveCreator_Curve.cxx  CurveCreator_Curve.hxx  CurveCreator_CurveEditor.cxx  CurveCreator_CurveEditor.hxx  CurveCreator_Diff.cxx  CurveCreator_Diff.hxx  CurveCreator_Displayer.cxx  CurveCreator_Displayer.hxx  CurveCreator_EditPntDlg.cxx  CurveCreator_EditPntDlg.h  CurveCreator_EditPntsDlg.cxx  CurveCreator_EditPntsDlg.h  CurveCreator_EditPntsWidget.cxx  CurveCreator_EditPntsWidget.h  CurveCreator_ICurve.cxx  CurveCreator_ICurve.hxx  CurveCreator_Listener.hxx  CurveCreator_Macro.hxx  CurveCreator_NewPointDlg.cxx  CurveCreator_NewPointDlg.h  CurveCreator_NewSectionDlg.cxx  CurveCreator_NewSectionDlg.h  CurveCreator_Operation.cxx  CurveCreator_Operation.hxx  CurveCreator_PointItem.cxx  CurveCreator_PointItem.h  CurveCreator_Section.hxx  CurveCreator_TableView.cxx  CurveCreator_TreeView.cxx  CurveCreator_TreeView.h  CurveCreator_UndoOptsDlg.cxx  CurveCreator_UndoOptsDlg.h  CurveCreator_Utils.cxx  CurveCreator_Utils.hxx  CurveCreator_UtilsICurve.cxx  CurveCreator_Widget.cpp  CurveCreator_Widget.cxx  CurveCreator_Widget.h  (+1 more)
src/FromOCCT/PTKernel/: CMakeLists.txt  DBC_BaseArray.hxx  DBC_BaseArray.ixx  DBC_BaseArray_objs.hxx  DBC_VArrayNodeOfVArrayOfCharacter_0.cxx  DBC_VArrayNodeOfVArrayOfExtCharacter_0.cxx  DBC_VArrayNodeOfVArrayOfInteger_0.cxx  DBC_VArrayNodeOfVArrayOfReal_0.cxx  DBC_VArrayOfCharacter.hxx  DBC_VArrayOfCharacter_0.cxx  DBC_VArrayOfExtCharacter.hxx  DBC_VArrayOfExtCharacter_0.cxx  DBC_VArrayOfInteger.hxx  DBC_VArrayOfInteger_0.cxx  DBC_VArrayOfReal.hxx  DBC_VArrayOfReal_0.cxx  ObjMgt_ExternRef.ixx  ObjMgt_ExternShareable.ixx  ObjMgt_PSeqOfExtRef_0.cxx  ObjMgt_SeqNodeOfPSeqOfExtRef_0.cxx  PColStd_FieldOfHArray1OfExtendedString_0.cxx  PColStd_FieldOfHArray1OfInteger_0.cxx  PColStd_FieldOfHArray1OfPersistent_0.cxx  PColStd_FieldOfHArray1OfReal_0.cxx  PColStd_FieldOfHArray2OfInteger_0.cxx  PColStd_FieldOfHArray2OfPersistent_0.cxx  PColStd_FieldOfHArray2OfReal_0.cxx  PColStd_HArray1OfExtendedString_0.cxx  PColStd_HArray1OfInteger_0.cxx  PColStd_HArray1OfPersistent_0.cxx  PColStd_HArray1OfReal_0.cxx  PColStd_HArray2OfInteger_0.cxx  PColStd_HArray2OfPersistent_0.cxx  PColStd_HArray2OfReal_0.cxx  PColStd_VArrayNodeOfFieldOfHArray1OfExtendedString_0.cxx  PColStd_VArrayNodeOfFieldOfHArray1OfInteger_0.cxx  PColStd_VArrayNodeOfFieldOfHArray1OfPersistent_0.cxx  PColStd_VArrayNodeOfFieldOfHArray1OfReal_0.cxx  PColStd_VArrayNodeOfFieldOfHArray2OfInteger_0.cxx  PColStd_VArrayNodeOfFieldOfHArray2OfPersistent_0.cxx  (+13 more)
src/FromOCCT/TKPCAF/: CMakeLists.txt  PDataXtd_Axis.ixx  PDataXtd_Constraint.ixx  PDataXtd_Geometry.ixx  PDataXtd_PatternStd.ixx  PDataXtd_Placement.ixx  PDataXtd_Plane.ixx  PDataXtd_Point.ixx  PDataXtd_Position.ixx  PDataXtd_Shape.ixx  PNaming_FieldOfHArray1OfNamedShape_0.cxx  PNaming_HArray1OfNamedShape_0.cxx  PNaming_Name.ixx  PNaming_Name_1.ixx  PNaming_Name_2.ixx  PNaming_NamedShape.ixx  PNaming_Naming.ixx  PNaming_Naming_1.ixx  PNaming_Naming_2.ixx  PNaming_VArrayNodeOfFieldOfHArray1OfNamedShape_0.cxx  PPrsStd_AISPresentation.ixx  PPrsStd_AISPresentation_1.ixx
src/FromOCCT/TKPLCAF/: CMakeLists.txt  PDF_Attribute.ixx  PDF_Data.ixx  PDF_FieldOfHAttributeArray1_0.cxx  PDF_HAttributeArray1_0.cxx  PDF_Reference.ixx  PDF_TagSource.ixx  PDF_VArrayNodeOfFieldOfHAttributeArray1_0.cxx  PDataStd_AsciiString.ixx  PDataStd_BooleanArray.ixx  PDataStd_BooleanList.ixx  PDataStd_ByteArray.ixx  PDataStd_ByteArray_1.ixx  PDataStd_Comment.ixx  PDataStd_Directory.ixx  PDataStd_Expression.ixx  PDataStd_ExtStringArray.ixx  PDataStd_ExtStringArray_1.ixx  PDataStd_ExtStringList.ixx  PDataStd_FieldOfHArray1OfByte_0.cxx  PDataStd_FieldOfHArray1OfHArray1OfInteger_0.cxx  PDataStd_FieldOfHArray1OfHArray1OfReal_0.cxx  PDataStd_FieldOfHArray1OfHAsciiString_0.cxx  PDataStd_HArray1OfByte_0.cxx  PDataStd_HArray1OfHArray1OfInteger_0.cxx  PDataStd_HArray1OfHArray1OfReal_0.cxx  PDataStd_HArray1OfHAsciiString_0.cxx  PDataStd_IntPackedMap.ixx  PDataStd_IntPackedMap_1.ixx  PDataStd_Integer.ixx  PDataStd_IntegerArray.ixx  PDataStd_IntegerArray_1.ixx  PDataStd_IntegerList.ixx  PDataStd_Name.ixx  PDataStd_NamedData.ixx  PDataStd_NoteBook.ixx  PDataStd_Real.ixx  PDataStd_RealArray.ixx  PDataStd_RealArray_1.ixx  PDataStd_RealList.ixx  (+14 more)
src/FromOCCT/TKPShape/: CMakeLists.txt  PBRep_Curve3D.ixx  PBRep_CurveOn2Surfaces.ixx  PBRep_CurveOnClosedSurface.ixx  PBRep_CurveOnSurface.ixx  PBRep_CurveRepresentation.ixx  PBRep_GCurve.ixx  PBRep_PointOnCurve.ixx  PBRep_PointOnCurveOnSurface.ixx  PBRep_PointOnSurface.ixx  PBRep_PointRepresentation.ixx  PBRep_PointsOnSurface.ixx  PBRep_Polygon3D.ixx  PBRep_PolygonOnClosedSurface.ixx  (+182 more)
src/ImportExportGUI/: ImportExportGUI.cxx  ImportExportGUI.h  ImportExportGUI_1Sel1LineEdit2ListWidget_QTD.ui  ImportExportGUI_ExportXAODlg.cxx  ImportExportGUI_ExportXAODlg.h  ImportExportGUI_ImportXAODlg.cxx  ImportExportGUI_ImportXAODlg.h  ImportExportGUI_Widgets.cxx  ImportExportGUI_Widgets.h  Makefile.am  MeasureGUI_1Sel3LineEdit_QTD.ui
src/XAO/: BooleanField.cxx  BooleanField.hxx  BooleanStep.cxx  BooleanStep.hxx  BrepGeometry.cxx  BrepGeometry.hxx  DoubleField.cxx  DoubleField.hxx  DoubleStep.cxx  DoubleStep.hxx  Field.cxx  Field.hxx  GeometricElement.cxx  GeometricElement.hxx  Geometry.cxx  Geometry.hxx  Group.cxx  Group.hxx  IntegerField.cxx  IntegerField.hxx  IntegerStep.cxx  IntegerStep.hxx  Makefile.am  Step.cxx  Step.hxx  StringField.cxx  StringField.hxx  StringStep.cxx  StringStep.hxx  XAO_BooleanField.cxx  XAO_BooleanField.hxx  XAO_BooleanStep.cxx  XAO_BooleanStep.hxx  XAO_BrepGeometry.cxx  XAO_BrepGeometry.hxx  XAO_DoubleField.cxx  XAO_DoubleField.hxx  XAO_DoubleStep.cxx  XAO_DoubleStep.hxx  XAO_Exception.hxx  (+30 more)
src/XAOExport/: Makefile.am  XAOExport.cxx
src/XAOImport/: Makefile.am  XAOImport.cxx
src/XAO_Swig/: CMakeLists.txt  Makefile.am  xao.py  xao_swig.i
(+2017 files in other folders)
